--- a/FinalSweet/Views/Home/About.cshtml
+++ b/FinalSweet/Views/Home/About.cshtml
@@ -1,12 +1,11 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
-</hgroup>
-<div class="row-fluid">
-    <div class="span12">
-        <p>Use this area to provide additional information.</p>
-    </div>
-</div>
+<h2>@ViewBag.Title.</h2>
+
+
+<p><font color="red"><font size="6">S</font></font><font size="4">imple</font></p>
+<p><font color="red"><font size="6">W</font></font><font size="4">eb-application</font></p>
+<p><font color="red"><font size="6">E</font></font><font size="4">xperience</font></p>
+<p><font color="red"><font size="6">E</font></font><font size="4">xercise</font></p>
+<p><font color="red"><font size="6">T</font></font><font size="4">ask</font></p>
