--- a/FinalSweet/Views/UsersAdmin/Edit.cshtml
+++ b/FinalSweet/Views/UsersAdmin/Edit.cshtml
@@ -1,13 +1,6 @@
 ﻿@model IdentitySample.Models.EditUserViewModel
-
-@{
-    ViewBag.Title = "Edit";
-}
-
-<h2>Edit.</h2>
-
-
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
@@ -19,8 +12,20 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-               @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-               @Html.ValidationMessageFor(model => model.Email)
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Email)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.firstName, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.firstName, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.lastName, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.lastName, new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
